<resources>
    <string name="AboutMenu">About us</string>
    <string name="ChangePasswordText">Change password</string>
    <string name="ContactMenu">Contact support</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DeleteAccountConfirmationMessage">Are you sure you want to delete your account? By deleting your user account, your access to the translator is terminated and your favourite and history words may be deleted.</string>
    <string name="DeleteAccountConfirmationRemoveAccountButton">Yes, Delete</string>
    <string name="FloatingHeadSettingsText">Enable floating mode</string>
    <string name="HelpMenu">Help</string>
    <string name="Invite_user_part1">Fast dictionary from</string>
    <string name="Invite_user_part2">is available for Android.</string>
    <string name="OrientationSettingsText">Enable horizontal mode</string>
    <string name="PurchaseHistoryText">Purchase history</string>
    <string name="RateMenu">Rate us</string>
    <string name="SeekBarOfflineSpeedText">Adjust the speed of the pronunciations (The speed can only be changed for offline pronunciations)</string>
    <string name="SettingsMenu">Fastdic settings</string>
    <string name="SuggestMenu">Suggest Fastdic to others</string>
    <string name="TermsAndConditionsMenu">Terms and privacy policy</string>
    <string name="TextToSpeechText">Offline pronunciations</string>
    <string name="TwoOptionsText">"Change the function of the back button
"</string>
    <string name="abbreviations">Abbreviations</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activate_and_login_button_title">Login and Activate</string>
    <string name="activate_button_title">Activate</string>
    <string name="activate_or_restore_button_title">Activate or Restore</string>
    <string name="active_your_email_address">Verify your email</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="add">Add</string>
    <string name="add_to_x_directory">Added to \"%s\".</string>
    <string name="ads_are_removed">Ads have been removed</string>
    <string name="advertisements_description_on_boarding">"As a small business, we rely on 
advertising to support our mission.
By purchasing a subscription, you can
 support us."</string>
    <string name="ai_plan_until">AI subscription ends on %s</string>
    <string name="ai_tab_title">AI translator</string>
    <string name="ai_title">AI translator</string>
    <string name="ai_translator_limitation_cta_title">Purchase subscription</string>
    <string name="ai_translator_limitation_desc">"You’ve reached your online translator limitations.
Purchase a subscription to use the online translator without any limitations."</string>
    <string name="ai_translator_with_rewarded_ads_limitation_desc">"You’ve reached your online translator limitations.
Purchase a subscription to use the online translator without any limitations."</string>
    <string name="all">All</string>
    <string name="an_email_sent_to_change_your_password">"An email containing a recovery link will be sent to your email in 5 minutes.
Refer to your inbox and complete the steps."</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apd_admob_banner_ad_text">Ad</string>
    <string name="apd_admob_banner_body_tools">Install Flood-It App for free! Free Popular Casual Game</string>
    <string name="apd_admob_banner_cta_tools">INSTALL</string>
    <string name="apd_admob_banner_headline_tools">Test Ad : Flood-It!</string>
    <string name="apd_admob_banner_icon_decs">Admob banner icon</string>
    <string name="app_full_name">Fast Dictionary</string>
    <string name="app_name">Fastdic</string>
    <string name="app_name_pe">Fast Dictionary</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_logo">Application logo</string>
    <string name="application_not_found">The desired application was not found!</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_mediation_debugger_no_axon_events_text">Track Axon events and see them here by using AppLovinEventService.trackEvent(...).</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="back_button">Back</string>
    <string name="back_to_app">Return to Fast Dictionary</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="bigo_ad_form_cancel">Cancel</string>
    <string name="bigo_ad_form_privacy_content">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="bigo_ad_form_privacy_notice">Privacy Notice</string>
    <string name="bigo_ad_form_question_hint">Please Enter</string>
    <string name="bigo_ad_form_submit">Submit</string>
    <string name="bigo_ad_form_warning">The answer is required</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="change_language">Change language</string>
    <string name="continue_button_title">Continue</string>
    <string name="delete_account_text">Delete the account</string>
    <string name="desc_for_floating_background">"In Android versions lower than 8, enable this option to allow Fastdic to stay open in the background.
Not used for higher versions in which selecting a text will show a popup from which Fastdic can be selected by clicking on the three-dots."</string>
    <string name="desc_for_make_keyboard_ready">Activate the keyboard when opening the app</string>
    <string name="edit_user_information">Update profile</string>
    <string name="email_not_activated">You have not verified your email yet!</string>
    <string name="english_on_boarding">English - انگلیسی</string>
    <string name="fast_speed">Faster</string>
    <string name="favorite">My words</string>
    <string name="hello">Hello!</string>
    <string name="login_hint">example@email.com</string>
    <string name="logout_from_account">Log out</string>
    <string name="made_keyboard_ready">Activating the keyboard</string>
    <string name="more">Settings</string>
    <string name="offline_translator">Offline translator</string>
    <string name="offline_translator_desc">If you enable this option, you can use the offline text translator (This feature is only available to subscribers).</string>
    <string name="persian_on_boarding">Persian - فارسی</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="select_menus_language">"Select menu's language"</string>
    <string name="slow_speed">Slower</string>
    <string name="sync_setting_desc">By enabling this option, you gain the ability to sync your folders and words in My Words across all of your devices. (This feature is only available to subscribers).</string>
    <string name="sync_setting_title">Sync</string>
    <string name="to_active_orientation">To activate the auto-rotation function, proceed through https://Android settings.</string>
    <string name="welcome_description">"Before getting started, 
 let’s go over a few quick steps."</string>
</resources>