<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="?tabBarBackground" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView android:id="@id/language_container_card" android:background="?tableViewBackground" android:visibility="visible" android:layout_width="match_parent" android:layout_height="60.0dp" android:layout_marginLeft="@dimen/small_margin" android:layout_marginTop="@dimen/margin" android:layout_marginRight="@dimen/small_margin" android:layout_marginBottom="@dimen/margin" app:cardCornerRadius="@dimen/corner_radius" app:strokeColor="?tableViewBorder" app:strokeWidth="@dimen/small_size">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/my_words_inside_of_container" android:background="?tabBarBackground" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textSize="@dimen/body2_font_size" android:textColor="?labelColor" android:id="@id/language_title_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:layout_marginTop="@dimen/directory_margin_top_bottom" android:layout_marginBottom="@dimen/directory_margin_top_bottom" android:text="@string/change_language" android:drawablePadding="@dimen/margin" android:fontFamily="@font/iransansxregular" android:layout_marginStart="@dimen/directory_margin_top_bottom" android:layout_marginEnd="@dimen/directory_margin_left_right" app:drawableRightCompat="@drawable/icon_right_arrow_theme" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout android:background="?tableViewBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/sync_switch" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin" android:layout_marginTop="@dimen/small_margin" android:layout_marginRight="@dimen/margin" android:layout_marginBottom="@dimen/small_margin" android:checked="false" android:text="@string/sync_setting_title" android:layout_weight="1.0" android:fontFamily="@font/iransansxregular" android:layout_marginHorizontal="@dimen/margin" android:layout_marginVertical="@dimen/small_margin" />
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:background="@android:color/transparent" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/sync_setting_desc" android:fontFamily="@font/iransansxregular" />
        <LinearLayout android:background="?tableViewBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/offline_translator_switch" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:checked="false" android:text="@string/offline_translator" android:layout_weight="1.0" android:fontFamily="@font/iransansxregular" />
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:background="@android:color/transparent" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/offline_translator_desc" android:fontFamily="@font/iransansxregular" />
        <LinearLayout android:orientation="vertical" android:background="?tableViewBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <LinearLayout android:padding="@dimen/margin" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/switchTextToSpeech" android:layout_width="0.0dp" android:layout_height="wrap_content" android:checked="false" android:text="@string/TextToSpeechText" android:layout_weight="1.0" android:fontFamily="@font/iransansxregular" />
            </LinearLayout>
            <LinearLayout android:padding="@dimen/margin" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/desc_font_size" android:textColor="?labelColor" android:id="@id/editTextSlowSpeedText" android:background="@android:color/transparent" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/slow_speed" android:fontFamily="@font/iransansxregular" />
                <SeekBar android:id="@id/seekBarOfflineSpeed" android:layout_width="0.0dp" android:layout_height="wrap_content" android:max="4" android:progress="1" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/desc_font_size" android:textColor="?labelColor" android:id="@id/editTextFastSpeedText" android:background="@android:color/transparent" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/fast_speed" android:fontFamily="@font/iransansxregular" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:id="@id/editTextOfflineSpeedText" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/SeekBarOfflineSpeedText" />
        <LinearLayout android:background="?tableViewBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/ready_keyboard_switch" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:checked="false" android:text="@string/made_keyboard_ready" android:layout_weight="1.0" android:fontFamily="@font/iransansxregular" />
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:background="@android:color/transparent" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/desc_for_make_keyboard_ready" android:fontFamily="@font/iransansxregular" />
        <LinearLayout android:background="?tableViewBackground" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/switchFloatingHead" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:checked="false" android:text="@string/FloatingHeadSettingsText" android:layout_weight="1.0" android:fontFamily="@font/iransansxregular" />
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:background="@android:color/transparent" android:focusableInTouchMode="false" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/desc_for_floating_background" android:fontFamily="@font/iransansxregular" />
        <LinearLayout android:orientation="vertical" android:background="?tableViewBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin">
            <com.google.android.material.switchmaterial.SwitchMaterial android:enabled="false" android:textSize="@dimen/body1_font_size" android:textColor="?labelColor" android:id="@id/switchOrientation" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:checked="false" android:text="@string/OrientationSettingsText" android:fontFamily="@font/iransansxregular" />
        </LinearLayout>
        <TextView android:textSize="@dimen/small_desc_font_size" android:textColor="@color/fdFormLabel" android:id="@id/autoRotationDescTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/to_active_orientation" />
        <View android:layout_width="match_parent" android:layout_height="80.0dp" />
    </LinearLayout>
</ScrollView>
