<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:tag="layout/fragment_profile_0" android:background="?tabBarBackground" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/profile_layout_view" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
        <fast.dic.dict.views.CloudWordsView android:textColor="?wordCloudColorDark" android:background="?topBackground" android:layout_width="match_parent" android:layout_height="180.0dp" app:hideWords="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="180.0dp" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:textSize="@dimen/body3_font_size" android:textColor="@color/white" android:gravity="center" android:id="@id/user_full_name_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_hint" android:fontFamily="@font/iransansxbold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/body1_font_size" android:textColor="?formLabel" android:gravity="center" android:id="@id/user_email_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/login_hint" android:fontFamily="@font/iransansxregular" />
                <TextView android:textSize="@dimen/body1_font_size" android:textColor="?formLabel" android:gravity="center" android:id="@id/remaining_date_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:fontFamily="@font/iransansxregular" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="180.0dp">
            <TextView android:textSize="@dimen/body1_font_size" android:textColor="?formLabel" android:id="@id/email_not_activated_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/email_not_activated" android:fontFamily="@font/iransansxregular" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <Button android:textSize="@dimen/body2_font_size" android:textColor="@color/fdBlack" android:id="@id/active_email_button_or_subscriptions" android:padding="@dimen/margin" android:layout_width="match_parent" android:layout_height="70.0dp" android:layout_marginLeft="@dimen/margin" android:layout_marginRight="@dimen/margin" android:text="@string/active_your_email_address" android:fontFamily="@font/iransansxregular" android:backgroundTint="@drawable/secondary_button_selector" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/description_label" />
            <fast.dic.dict.views.RowView android:id="@id/update_user_profile_row" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/edit_user_information" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
            <fast.dic.dict.views.RowView android:id="@id/history_purchased_row" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/PurchaseHistoryText" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
            <fast.dic.dict.views.RowView android:id="@id/change_password_row" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ChangePasswordText" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
            <fast.dic.dict.views.RowView android:id="@id/delete_account_row" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/delete_account_text" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
            <fast.dic.dict.views.RowView android:id="@id/logout_row" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/logout_from_account" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin" />
        </LinearLayout>
        <fast.dic.dict.views.CustomProgressbar android:id="@id/loading_spinner" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.0" />
    </RelativeLayout>
</ScrollView>
