<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/fragment_language_on_boarding_0" android:background="?tabBarBackground" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/not_logged_in_view" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/continue_button">
        <fast.dic.dict.views.CloudWordsView android:textColor="?wordCloudColorDark" android:id="@id/cloud_words_view" android:background="?topBackground" android:layout_width="match_parent" android:layout_height="180.0dp" app:disableHistory="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:layout_gravity="center" android:id="@id/logo_iv" android:layout_width="100.0dp" android:layout_height="160.0dp" android:layout_marginTop="-80.0dp" android:src="@drawable/app_logo_sp" android:contentDescription="@string/application_logo" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="-80.0dp">
            <TextView android:textSize="@dimen/body4_font_size" android:textColor="?labelColor" android:id="@id/title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dp" android:text="@string/hello" android:fontFamily="@font/iransansxbold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/body2_font_size" android:textColor="?labelColor" android:gravity="center" android:id="@id/description_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/welcome_description" android:fontFamily="@font/iransansxregular" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/title_label" />
            <ScrollView android:layout_width="match_parent" android:layout_height="0.0dp" android:fillViewport="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/description_label">
                <LinearLayout android:gravity="center|bottom" android:orientation="vertical" android:id="@id/actions_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin">
                    <TextView android:textSize="@dimen/body4_font_size" android:textColor="?labelColor" android:id="@id/language_title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin" android:text="@string/select_menus_language" android:fontFamily="@font/iransansxbold" />
                    <com.google.android.material.button.MaterialButton android:textSize="@dimen/body2_font_size" android:textColor="?labelTextColor" android:id="@id/english_button" android:padding="@dimen/margin" android:layout_width="300.0dp" android:layout_height="wrap_content" android:text="@string/english_on_boarding" android:fontFamily="@font/iransansxregular" android:backgroundTint="?directoryRowColor" app:strokeColor="@color/toggle_background_color" style="?materialButtonOutlinedStyle" />
                    <com.google.android.material.button.MaterialButton android:textSize="@dimen/body2_font_size" android:textColor="?labelTextColor" android:id="@id/persian_button" android:padding="@dimen/margin" android:layout_width="300.0dp" android:layout_height="wrap_content" android:text="@string/persian_on_boarding" android:fontFamily="@font/iransansxregular" android:backgroundTint="?directoryRowColor" app:strokeColor="@color/toggle_background_color" style="?materialButtonOutlinedStyle" />
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <Button android:textSize="@dimen/body2_font_size" android:textColor="@color/fdBlack" android:id="@id/continue_button" android:padding="@dimen/margin" android:layout_width="300.0dp" android:layout_height="wrap_content" android:text="@string/continue_button_title" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="@font/iransansxregular" android:backgroundTint="@drawable/secondary_button_selector" />
</RelativeLayout>
